--- a/fredge.csproj
+++ b/fredge.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.19" />
+    <PackageReference Include="Npgsql" Version="10.0.1" />
     <PackageReference Include="SlackNet" Version="0.17.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     <PackageReference Include="Websocket.Client" Version="5.3.0" />
